@@ -24,7 +24,7 @@ import org.eclipse.scout.rt.shared.services.lookup.LookupRow;
 @ClassId("4b011d3b-4a60-4777-823f-fa0cc09d3292")
 public class AvailableLocaleLookupCall extends LocalLookupCall<Locale> {
 
-  private static final Locale[] AVAILABLE_LOCALES = {Locale.US, new Locale("de", "CH")};
+  private static final Locale[] AVAILABLE_LOCALES = {Locale.US, Locale.of("de", "CH")};
   private static final long serialVersionUID = 1L;
 
   protected Locale[] sort(Locale[] locales) {
